--- a/Codename CHOMPS/HomeViewCell.xib
+++ b/Codename CHOMPS/HomeViewCell.xib
@@ -48,8 +48,9 @@
 									<object class="IBUILabel" id="633933401">
 										<reference key="NSNextResponder" ref="728384827"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{0, 62}, {302, 14}}</string>
+										<string key="NSFrame">{{5, 107}, {297, 25}}</string>
 										<reference key="NSSuperview" ref="728384827"/>
+										<reference key="NSWindow"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -74,59 +75,55 @@
 										</object>
 										<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 									</object>
+									<object class="IBUIImageView" id="179807848">
+										<reference key="NSNextResponder" ref="728384827"/>
+										<int key="NSvFlags">292</int>
+										<string key="NSFrame">{{200, 6}, {93, 93}}</string>
+										<reference key="NSSuperview" ref="728384827"/>
+										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView"/>
+										<string key="NSReuseIdentifierKey">_NS:9</string>
+										<bool key="IBUIUserInteractionEnabled">NO</bool>
+										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+									</object>
+									<object class="IBUIImageView" id="879365781">
+										<reference key="NSNextResponder" ref="728384827"/>
+										<int key="NSvFlags">292</int>
+										<string key="NSFrame">{{102, 6}, {93, 93}}</string>
+										<reference key="NSSuperview" ref="728384827"/>
+										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView" ref="179807848"/>
+										<string key="NSReuseIdentifierKey">_NS:9</string>
+										<bool key="IBUIUserInteractionEnabled">NO</bool>
+										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+									</object>
+									<object class="IBUIImageView" id="346580091">
+										<reference key="NSNextResponder" ref="728384827"/>
+										<int key="NSvFlags">292</int>
+										<string key="NSFrame">{{5, 6}, {93, 93}}</string>
+										<reference key="NSSuperview" ref="728384827"/>
+										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView" ref="879365781"/>
+										<string key="NSReuseIdentifierKey">_NS:9</string>
+										<bool key="IBUIUserInteractionEnabled">NO</bool>
+										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+									</object>
 								</array>
-								<string key="NSFrame">{{20, 7}, {302, 76}}</string>
+								<string key="NSFrame">{{20, 5}, {302, 139}}</string>
 								<reference key="NSSuperview" ref="527120849"/>
-								<reference key="NSNextKeyView" ref="346580091"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="633933401"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MC4xNjY0MzQ1NzU0IDAuMTQwMTMzMTIyMiAxAA</bytes>
+									<int key="NSColorSpace">2</int>
+									<bytes key="NSRGB">MC40MTE3NjQ3MDU5IDAuNjU4ODIzNTI5NCAwLjQxMTc2NDcwNTkAA</bytes>
 								</object>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
-							<object class="IBUIImageView" id="346580091">
-								<reference key="NSNextResponder" ref="527120849"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{43, 20}, {50, 50}}</string>
-								<reference key="NSSuperview" ref="527120849"/>
-								<reference key="NSNextKeyView" ref="879365781"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-							</object>
-							<object class="IBUIImageView" id="879365781">
-								<reference key="NSNextResponder" ref="527120849"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{101, 20}, {50, 50}}</string>
-								<reference key="NSSuperview" ref="527120849"/>
-								<reference key="NSNextKeyView" ref="179807848"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-							</object>
-							<object class="IBUIImageView" id="179807848">
-								<reference key="NSNextResponder" ref="527120849"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{159, 20}, {50, 50}}</string>
-								<reference key="NSSuperview" ref="527120849"/>
-								<reference key="NSNextKeyView" ref="197422672"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-							</object>
-							<object class="IBUIImageView" id="197422672">
-								<reference key="NSNextResponder" ref="527120849"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{217, 20}, {50, 50}}</string>
-								<reference key="NSSuperview" ref="527120849"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-							</object>
 						</array>
-						<string key="NSFrameSize">{287, 90}</string>
+						<string key="NSFrameSize">{320, 149}</string>
 						<reference key="NSSuperview" ref="483757427"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="728384827"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -140,17 +137,17 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{320, 91}</string>
+				<string key="NSFrameSize">{320, 150}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="527120849"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<bool key="IBUIOpaque">NO</bool>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<int key="IBUISelectionStyle">0</int>
-				<int key="IBUIAccessoryType">2</int>
 				<reference key="IBUIContentView" ref="527120849"/>
 				<string key="IBUIReuseIdentifier">HomeViewCell</string>
-				<integer value="100" key="IBUIRowHeight"/>
+				<real value="159" key="IBUIRowHeight"/>
 			</object>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -161,7 +158,7 @@
 						<reference key="source" ref="483757427"/>
 						<reference key="destination" ref="346580091"/>
 					</object>
-					<int key="connectionID">83</int>
+					<int key="connectionID">161</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -169,7 +166,7 @@
 						<reference key="source" ref="483757427"/>
 						<reference key="destination" ref="879365781"/>
 					</object>
-					<int key="connectionID">84</int>
+					<int key="connectionID">162</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -177,15 +174,7 @@
 						<reference key="source" ref="483757427"/>
 						<reference key="destination" ref="179807848"/>
 					</object>
-					<int key="connectionID">85</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">imageView4</string>
-						<reference key="source" ref="483757427"/>
-						<reference key="destination" ref="197422672"/>
-					</object>
-					<int key="connectionID">86</int>
+					<int key="connectionID">163</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -193,7 +182,7 @@
 						<reference key="source" ref="483757427"/>
 						<reference key="destination" ref="633933401"/>
 					</object>
-					<int key="connectionID">157</int>
+					<int key="connectionID">164</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -219,42 +208,17 @@
 						<int key="objectID">3</int>
 						<reference key="object" ref="483757427"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="346580091"/>
-							<reference ref="879365781"/>
-							<reference ref="179807848"/>
-							<reference ref="197422672"/>
 							<reference ref="728384827"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">63</int>
-						<reference key="object" ref="197422672"/>
-						<array class="NSMutableArray" key="children"/>
-						<reference key="parent" ref="483757427"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">46</int>
-						<reference key="object" ref="879365781"/>
-						<array class="NSMutableArray" key="children"/>
-						<reference key="parent" ref="483757427"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">38</int>
-						<reference key="object" ref="346580091"/>
-						<array class="NSMutableArray" key="children"/>
-						<reference key="parent" ref="483757427"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">55</int>
-						<reference key="object" ref="179807848"/>
-						<array class="NSMutableArray" key="children"/>
-						<reference key="parent" ref="483757427"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">147</int>
 						<reference key="object" ref="728384827"/>
 						<array class="NSMutableArray" key="children">
+							<reference ref="179807848"/>
+							<reference ref="346580091"/>
+							<reference ref="879365781"/>
 							<reference ref="633933401"/>
 						</array>
 						<reference key="parent" ref="483757427"/>
@@ -262,6 +226,21 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">156</int>
 						<reference key="object" ref="633933401"/>
+						<reference key="parent" ref="728384827"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">38</int>
+						<reference key="object" ref="346580091"/>
+						<reference key="parent" ref="728384827"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">46</int>
+						<reference key="object" ref="879365781"/>
+						<reference key="parent" ref="728384827"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">55</int>
+						<reference key="object" ref="179807848"/>
 						<reference key="parent" ref="728384827"/>
 					</object>
 				</array>
@@ -277,15 +256,49 @@
 				<string key="38.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="46.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="55.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="63.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">157</int>
+			<int key="maxID">164</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">HomeViewCell</string>
+					<string key="superclassName">UITableViewCell</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="imageView1">UIImageView</string>
+						<string key="imageView2">UIImageView</string>
+						<string key="imageView3">UIImageView</string>
+						<string key="timeLabel">UILabel</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="imageView1">
+							<string key="name">imageView1</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="imageView2">
+							<string key="name">imageView2</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="imageView3">
+							<string key="name">imageView3</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="timeLabel">
+							<string key="name">timeLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/HomeViewCell.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
