--- a/Codename CHOMPS/iPhoneMainStoryboard.storyboard
+++ b/Codename CHOMPS/iPhoneMainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12C60" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="YNP-kX-WwT">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="YNP-kX-WwT">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -121,6 +121,9 @@
                         <subviews>
                             <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="YMW-ff-7Vo">
                                 <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="499" id="kMM-o9-ifM"/>
+                                </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="zWq-fU-cZ9">
                                     <size key="itemSize" width="140" height="131"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -167,29 +170,35 @@
                                             <action selector="addMoreImages:" destination="zOX-TZ-Sit" id="lSP-P9-Xhj"/>
                                         </connections>
                                     </barButtonItem>
-                                    <barButtonItem width="74" style="plain" systemItem="fixedSpace" id="MU2-RX-ct7"/>
-                                    <barButtonItem systemItem="done" id="xXW-zy-vkG">
-                                        <connections>
-                                            <action selector="saveSelectedImages:" destination="zOX-TZ-Sit" id="AOP-bW-bFa"/>
-                                        </connections>
-                                    </barButtonItem>
-                                    <barButtonItem width="62" style="plain" systemItem="fixedSpace" id="Tqo-gy-ZTk"/>
-                                    <barButtonItem title="Item" systemItem="cancel" id="1ma-Bk-dFr">
-                                        <connections>
-                                            <action selector="cancel:" destination="zOX-TZ-Sit" id="QY5-TA-SHT"/>
-                                        </connections>
-                                    </barButtonItem>
                                 </items>
                             </toolbar>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RCV-KE-sLE">
+                                <items>
+                                    <navigationItem title="New Meal" id="X5w-f3-aWn">
+                                        <barButtonItem key="leftBarButtonItem" title="Item" systemItem="cancel" id="1ma-Bk-dFr">
+                                            <connections>
+                                                <action selector="cancel:" destination="zOX-TZ-Sit" id="QY5-TA-SHT"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="xXW-zy-vkG">
+                                            <connections>
+                                                <action selector="saveSelectedImages:" destination="zOX-TZ-Sit" id="AOP-bW-bFa"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="RCV-KE-sLE" firstAttribute="trailing" secondItem="3Py-5a-ArL" secondAttribute="trailing" type="default" id="2P4-BV-o4U"/>
+                            <constraint firstItem="RCV-KE-sLE" firstAttribute="top" secondItem="3Py-5a-ArL" secondAttribute="top" type="default" id="Bbf-nB-uhH"/>
+                            <constraint firstItem="RCV-KE-sLE" firstAttribute="leading" secondItem="3Py-5a-ArL" secondAttribute="leading" type="default" id="F9Y-eO-RCh"/>
                             <constraint firstItem="YMW-ff-7Vo" firstAttribute="trailing" secondItem="3Py-5a-ArL" secondAttribute="trailing" type="default" id="Hb3-Fv-Te3"/>
                             <constraint firstItem="YMW-ff-7Vo" firstAttribute="leading" secondItem="3Py-5a-ArL" secondAttribute="leading" type="default" id="UuZ-fs-30R"/>
                             <constraint firstItem="UfZ-Ip-xnn" firstAttribute="bottom" secondItem="3Py-5a-ArL" secondAttribute="bottom" type="default" id="Wrp-8l-ogA"/>
-                            <constraint firstItem="UfZ-Ip-xnn" firstAttribute="top" secondItem="YMW-ff-7Vo" secondAttribute="bottom" type="default" id="drO-Vc-zxO"/>
+                            <constraint firstItem="YMW-ff-7Vo" firstAttribute="top" secondItem="RCV-KE-sLE" secondAttribute="bottom" type="default" id="iMc-u8-ldm"/>
                             <constraint firstItem="UfZ-Ip-xnn" firstAttribute="leading" secondItem="3Py-5a-ArL" secondAttribute="leading" type="default" id="nJD-DB-UlY"/>
-                            <constraint firstItem="YMW-ff-7Vo" firstAttribute="top" secondItem="3Py-5a-ArL" secondAttribute="top" type="default" id="pWg-g8-Hfl"/>
                             <constraint firstItem="UfZ-Ip-xnn" firstAttribute="trailing" secondItem="3Py-5a-ArL" secondAttribute="trailing" type="default" id="yhR-Tg-cnw"/>
                         </constraints>
                     </view>
